--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,12 @@
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 col-md-3 sm-lg-6" *ngFor="let user of users">
+      <div class="col-lg-4 col-md-3 col-sm-6"
+           *ngFor="let user of users">
         <div class="card" style="width: 18rem;">
-          <img src="{{user.image.url}}" class="card-img-top" alt="user-{{user.id}}">
+          <img src="{{user.image.url}}"
+               class="card-img-top"
+               alt="user-{{user.id}}">
           <div class="card-body">
             <h5 class="card-title">{{user.first_name}} {{user.last_name}}</h5>
             <p class="card-text">
@@ -14,7 +17,8 @@
             <p class="card-text">Region: {{user.region}}</p>
             <p class="card-text">Additional information: {{user.additional_information}}</p>
             <p class="card-text">Subscription: {{user.subscription ? 'Yes' : 'No'}}</p>
-            <a href="#" class="btn btn-primary" (click)="userInformation($event)">More information</a>
+            <a href="#" class="btn btn-primary"
+               (click)="userInformation($event)">More information</a>
           </div>
         </div>
       </div>
