--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -17,8 +17,8 @@
             <p class="card-text">Region: {{user.region}}</p>
             <p class="card-text">Additional information: {{user.additional_information}}</p>
             <p class="card-text">Subscription: {{user.subscription ? 'Yes' : 'No'}}</p>
-            <a href="#" class="btn btn-primary"
-               (click)="userInformation($event)">More information</a>
+            <button class="btn btn-primary"
+               (click)="userInformation()">More information</button>
           </div>
         </div>
       </div>
